--- a/user-app/src/components/App/App.css
+++ b/user-app/src/components/App/App.css
@@ -8,3 +8,49 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+/*
+  // TODO responsive width if only one card across
+*/
+.card {
+  /*add inline-display*/
+  display: inline-block;
+
+  max-width1: 33%;
+  min-width1: 33%;
+  min-height: 240px;
+  max-height: 240px;
+}
+
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 40vmin;
+  pointer-events: none;
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
