--- a/user-app/src/components/App/App.css
+++ b/user-app/src/components/App/App.css
@@ -46,6 +46,42 @@
   line-height: 0.6;
 }
 
+/*******************
+  spinner area
+*******************/
+
+#spinner{
+  visibility: hidden;
+  width: 4rem;
+  height: 4rem;
+
+  border: 8px solid #f3f3f3;
+  border-top: 6px solid #0f5e5e;
+  border-radius: 100%;
+
+  position: absolute;
+  top:0;
+  bottom:0;
+  left:0;
+  right: 0;
+  margin: auto;
+
+  animation: spin 1s infinite linear;
+}
+
+@keyframes spin {
+  from {
+      transform: rotate(0deg);
+  } to {
+      transform: rotate(360deg);
+  }
+}
+
+#spinner.show {
+  visibility: visible;
+}
+
+
 .App {
   text-align: center;
 }
